minor alignment fix

--- a/google-earbuds/styles.css
+++ b/google-earbuds/styles.css
@@ -271,7 +271,7 @@ body {
     grid-auto-flow: column;
     grid-template-columns: repeat(auto-fit, minmax(15rem, 43rem));
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     margin-top: 7rem;
     position: relative;
 }
